Merge branch 'tomerMaven' of https://github.com/yinonbz/FootballProject into mergedDataLayer
# Conflicts:
#	pom.xml
#	src/main/java/businessLayer/Tournament/LeagueController.java
#	src/main/java/businessLayer/userTypes/Administration/AssociationRepresentative.java
#	src/main/java/businessLayer/userTypes/SystemController.java
#	src/main/java/dataLayer/DBHandler.java
#	src/main/java/dataLayer/DB_Inter.java
#	src/main/java/serviceLayer/SystemService.java